--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,4 @@
 @import './components/gallery';
 @import './components/footer';
 @import './components/back-to-top';
+@import './components/modal_card';
